--- a/hooks/build
+++ b/hooks/build
@@ -1,4 +1,4 @@
 #!/bin/bash
 
-docker build -t $IMAGE_NAME --build-arg VCS_REF=$SOURCE_COMMIT --build-arg REVISION=$SOURCE_COMMIT .
+docker build -t $IMAGE_NAME --build-arg VCS_REF=$SOURCE_COMMIT --build-arg VCS_URL=$VCS_URL --build-arg SOURCE=$SOURCE --build-arg REVISION=$SOURCE_COMMIT .
 
