--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,7 @@
 #!/bin/bash
 
-docker build -t $IMAGE_NAME --label "org.opencontainers.image.revision=$SOURCE_COMMIT" --label "org.opencontainers.image.source=$DOCKERFILE_PATH" .
+docker build \
+  -t $IMAGE_NAME \
+  --label "org.opencontainers.image.revision=$SOURCE_COMMIT" \
+  --label "org.opencontainers.image.source=$DOCKERFILE_PATH" .
+
