--- a/hooks/build
+++ b/hooks/build
@@ -2,6 +2,6 @@
 
 docker build \
   -t $IMAGE_NAME .
-  # --label "org.opencontainers.image.revision=$SOURCE_COMMIT" \
-  # --label "org.opencontainers.image.source=$DOCKERFILE_PATH" .
+  --label "org.opencontainers.image.revision=$SOURCE_COMMIT" \
+  --label "org.opencontainers.image.source=$DOCKERFILE_PATH" .
 
